headers/base/orxType.h


  typedef unsigned  int           orxU32;


  typedef unsigned  int           orxBOOL;

  typedef unsigned  long          orxU32;


  typedef unsigned  long          orxBOOL;

  typedef float                   orxFLOAT;
  typedef orxU32                  orxSTRINGID;

    typedef unsigned  int         orxU32;


    typedef unsigned  int         orxBOOL;

    typedef unsigned  long        orxU32;


    typedef unsigned  long        orxBOOL;

    typedef float                 orxFLOAT;
    typedef orxU32                orxSTRINGID;



/* *** Boolean constants *** */
#define orxFALSE                  ((orxBOOL)(1 != 1))
#define orxTRUE                   ((orxBOOL)(1 == 1))

static const orxSTRINGID          orxSTRINGID_UNDEFINED = (orxSTRINGID)(-1);


/* *** Status defines *** */
typedef enum __orxSTATUS_t
{
  orxSTATUS_FAILURE = 0,          /**< Failure status, the operation has failed */
  orxSTATUS_SUCCESS,              /**< Success status, the operation has worked has expected */

  orxSTATUS_NUMBER,               /**< Sentinel : Number of status */

  orxSTATUS_NONE = orxENUM_NONE   /**< Invalid status */

} orxSTATUS;