headers/display/orxDisplay.h



/** Bitmap smoothing enum
 */
typedef enum __orxDISPLAY_SMOOTHING_t
{
  orxDISPLAY_SMOOTHING_DEFAULT = 0,
  orxDISPLAY_SMOOTHING_ON,
  orxDISPLAY_SMOOTHING_OFF,

  orxDISPLAY_SMOOTHING_NUMBER,

  orxDISPLAY_SMOOTHING_NONE = orxENUM_NONE

} orxDISPLAY_SMOOTHING;


/** Bitmap blend enum
 */
typedef enum __orxDISPLAY_BLEND_MODE_t
{
  orxDISPLAY_BLEND_MODE_ALPHA = 0,
  orxDISPLAY_BLEND_MODE_MULTIPLY,
  orxDISPLAY_BLEND_MODE_ADD,
  orxDISPLAY_BLEND_MODE_PREMUL,

  orxDISPLAY_BLEND_MODE_NUMBER,

  orxDISPLAY_BLEND_MODE_NONE = orxENUM_NONE

} orxDISPLAY_BLEND_MODE;


/** Color structure
 */
typedef struct __orxCOLOR_t
{
  union
  {
    orxVECTOR vRGB;                                         /**< RGB components: 12 */
    orxVECTOR vHSL;                                         /**< HSL components: 12 */
    orxVECTOR vHSV;                                         /**< HSV components: 12 */
  };
  orxFLOAT  fAlpha;                                         /**< Alpha component: 16 */

} orxCOLOR;