src/norx/oobject.nim


proc createNeighborList*(pstCheckBox: ptr orxOBOX; stGroupID: orxSTRINGID): ptr orxBANK {.
    cdecl, importc: "orxObject_CreateNeighborList", dynlib: libORX.}
  ## Creates a list of object at neighboring of the given box (ie. whose bounding volume intersects this box).
  ##  The following is an example for iterating over a neighbor list:
  ##  @param[in]   _pstCheckBox    Box to check intersection with
  ##  @param[in]   _stGroupID      Group ID to consider, orxSTRINGID_UNDEFINED for all
  ##  @return      orxBANK / nil
  ##
  # TODO: Fix these code block examples
  #  ## .. code-block:: nim
  #    orxVECTOR vPosition # The world position of the neighborhood area
  #    # set_position(vPosition)
  #    orxVECTOR vSize; # The size of the neighborhood area
  #    # set_size(vSize);
  #    orxVECTOR vPivot; # The pivot of the neighborhood area
  #    # set_pivot(vPivot);
  #    orxOBOX stBox;
  #    orxOBox_2DSet(&stBox, &vPosition, &vPivot, &vSize, 0);
  #    pstBank: ptr orxBANK = orxObject_CreateNeighborList(&stBox, orxSTRINGID_UNDEFINED);
  #    if(pstBank) {
  #        for(int i=0; i < orxBank_GetCount(pstBank); ++i)
  #        {
  #            orxOBJECT * pstObject = *((orxOBJECT **) orxBank_GetAtIndex(pstBank, i));
  #            do_something_with(pstObject);
  #        }
  #        orxObject_DeleteNeighborList(pstBank);
  #    }
  #

proc deleteNeighborList*(pstObjectList: ptr orxBANK) {.cdecl,
    importc: "orxObject_DeleteNeighborList", dynlib: libORX.}
  ## Deletes an object list created with orxObject_CreateNeighborList().
  ##  @param[in]   _pstObjectList  Concerned object list

proc setSmoothing*(pstObject: ptr orxOBJECT;
                            eSmoothing: orxDISPLAY_SMOOTHING): orxSTATUS {.cdecl,
    importc: "orxObject_SetSmoothing", dynlib: libORX.}
  ## @}
  ## @name Smoothing
  ##  @{
  ## Sets object smoothing.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _eSmoothing     Smoothing type (enabled, default or none)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setSmoothingRecursive*(pstObject: ptr orxOBJECT;
                                     eSmoothing: orxDISPLAY_SMOOTHING) {.cdecl,
    importc: "orxObject_SetSmoothingRecursive", dynlib: libORX.}
  ## Sets smoothing for an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _eSmoothing     Smoothing type (enabled, default or none)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getSmoothing*(pstObject: ptr orxOBJECT): orxDISPLAY_SMOOTHING {.cdecl,
    importc: "orxObject_GetSmoothing", dynlib: libORX.}
  ## Gets object smoothing.
  ##  @param[in]   _pstObject     Concerned object
  ##  @return Smoothing type (enabled, default or none)

proc getWorkingTexture*(pstObject: ptr orxOBJECT): ptr orxTEXTURE {.cdecl,
    importc: "orxObject_GetWorkingTexture", dynlib: libORX.}
  ## @}
  ## @name texture
  ##  @{
  ## Gets object working texture.
  ##  @param[in]   _pstObject     Concerned object
  ##  @return orxTEXTURE / nil

proc getWorkingGraphic*(pstObject: ptr orxOBJECT): ptr orxGRAPHIC {.cdecl,
    importc: "orxObject_GetWorkingGraphic", dynlib: libORX.}
  ## @}
  ## @name graphic
  ##  @{
  ## Gets object working graphic.
  ##  @param[in]   _pstObject     Concerned object
  ##  @return orxGRAPHIC / nil

proc setColor*(pstObject: ptr orxOBJECT; pstColor: ptr orxCOLOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetColor", dynlib: libORX.}
  ## Sets object color.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pstColor       Color to set, nil to remove any specific color
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setColorRecursive*(pstObject: ptr orxOBJECT; pstColor: ptr orxCOLOR) {.
    cdecl, importc: "orxObject_SetColorRecursive", dynlib: libORX.}
  ## Sets color of an object and all its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pstColor       Color to set, nil to remove any specific color

proc hasColor*(pstObject: ptr orxOBJECT): orxBOOL {.cdecl,
    importc: "orxObject_HasColor", dynlib: libORX.}
  ## Object has color accessor?
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxTRUE / orxFALSE

proc getColor*(pstObject: ptr orxOBJECT; pstColor: ptr orxCOLOR): ptr orxCOLOR {.
    cdecl, importc: "orxObject_GetColor", dynlib: libORX.}
  ## Gets object color.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[out]  _pstColor       Object's color
  ##  @return      orxCOLOR / nil

proc setRGB*(pstObject: ptr orxOBJECT; pvRGB: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxObject_SetRGB", dynlib: libORX.}
  ## Sets object RGB values.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvRGB          RGB values to set
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setRGBRecursive*(pstObject: ptr orxOBJECT; pvRGB: ptr orxVECTOR) {.
    cdecl, importc: "orxObject_SetRGBRecursive", dynlib: libORX.}
  ## Sets color of an object and all its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pvRGB          RGB values to set

proc setAlpha*(pstObject: ptr orxOBJECT; fAlpha: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetAlpha", dynlib: libORX.}
  ## Sets object alpha.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fAlpha         Alpha value to set
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setAlphaRecursive*(pstObject: ptr orxOBJECT; fAlpha: orxFLOAT) {.cdecl,
    importc: "orxObject_SetAlphaRecursive", dynlib: libORX.}
  ## Sets alpha of an object and all its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fAlpha         Alpha value to set

proc setRepeat*(pstObject: ptr orxOBJECT; fRepeatX: orxFLOAT;
                         fRepeatY: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxObject_SetRepeat", dynlib: libORX.}
  ## Sets object repeat (wrap) values.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fRepeatX       X-axis repeat value
  ##  @param[in]   _fRepeatY       Y-axis repeat value
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getRepeat*(pstObject: ptr orxOBJECT; pfRepeatX: ptr orxFLOAT;
                         pfRepeatY: ptr orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxObject_GetRepeat", dynlib: libORX.}
  ## Gets object repeat (wrap) values.
  ##  @param[in]   _pstObject     Concerned object
  ##  @param[out]  _pfRepeatX      X-axis repeat value
  ##  @param[out]  _pfRepeatY      Y-axis repeat value
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setBlendMode*(pstObject: ptr orxOBJECT;
                            eBlendMode: orxDISPLAY_BLEND_MODE): orxSTATUS {.cdecl,
    importc: "orxObject_SetBlendMode", dynlib: libORX.}
  ## Sets object blend mode.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _eBlendMode     Blend mode (alpha, multiply, add or none)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setBlendModeRecursive*(pstObject: ptr orxOBJECT;
                                     eBlendMode: orxDISPLAY_BLEND_MODE) {.cdecl,
    importc: "orxObject_SetBlendModeRecursive", dynlib: libORX.}
  ## Sets blend mode of an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _eBlendMode     Blend mode (alpha, multiply, add or none)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc hasBlendMode*(pstObject: ptr orxOBJECT): orxBOOL {.cdecl,
    importc: "orxObject_HasBlendMode", dynlib: libORX.}
  ## Object has blend mode accessor?
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxTRUE / orxFALSE

proc getBlendMode*(pstObject: ptr orxOBJECT): orxDISPLAY_BLEND_MODE {.
    cdecl, importc: "orxObject_GetBlendMode", dynlib: libORX.}
  ## Gets object blend mode.
  ##  @param[in]   _pstObject     Concerned object
  ##  @return Blend mode (alpha, multiply, add or none)

proc setLifeTime*(pstObject: ptr orxOBJECT; fLifeTime: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetLifeTime", dynlib: libORX.}
  ## @}
  ## @name Life time / active time
  ##  @{
  ## Sets object lifetime.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fLifeTime      Lifetime to set, negative value to disable it
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getLifeTime*(pstObject: ptr orxOBJECT): orxFLOAT {.cdecl,
    importc: "orxObject_GetLifeTime", dynlib: libORX.}
  ## Gets object lifetime.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Lifetime / negative value if none

proc getActiveTime*(pstObject: ptr orxOBJECT): orxFLOAT {.cdecl,
    importc: "orxObject_GetActiveTime", dynlib: libORX.}
  ## Gets object active time, i.e. the amount of time that the object has been alive taking into account
  ##  the object's clock multiplier and object's periods of pause.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Active time

proc getDefaultGroupID*(): orxSTRINGID {.cdecl,
    importc: "orxObject_GetDefaultGroupID", dynlib: libORX.}
  ## @}
  ## @name Group
  ##  @{
  ## Gets default group ID.
  ##  @return      Default group ID

proc getGroupID*(pstObject: ptr orxOBJECT): orxSTRINGID {.cdecl,
    importc: "orxObject_GetGroupID", dynlib: libORX.}
  ## Gets object's group ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      Object's group ID. This is the string ID (see orxString_GetFromID()) of the object's group name.

proc setGroupID*(pstObject: ptr orxOBJECT; stGroupID: orxSTRINGID): orxSTATUS {.
    cdecl, importc: "orxObject_SetGroupID", dynlib: libORX.}
  ## Sets object's group ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _stGroupID      Group ID to set. This is the string ID (see orxString_GetID()) of the object's group name.
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setGroupIDRecursive*(pstObject: ptr orxOBJECT; stGroupID: orxSTRINGID) {.
    cdecl, importc: "orxObject_SetGroupIDRecursive", dynlib: libORX.}
  ## Sets group ID of an object and all its owned children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _stGroupID      Group ID to set. This is the string ID (see orxString_GetID()) of the object's group name.

proc getNext*(pstObject: ptr orxOBJECT; stGroupID: orxSTRINGID): ptr orxOBJECT {.
    cdecl, importc: "orxObject_GetNext", dynlib: libORX.}
  ## Gets next object in group.
  ##  @param[in]   _pstObject      Concerned object, nil to get the first one
  ##  @param[in]   _stGroupID      Group ID to consider, orxSTRINGID_UNDEFINED for all
  ##  @return      orxOBJECT / nil

proc getNextEnabled*(pstObject: ptr orxOBJECT; stGroupID: orxSTRINGID): ptr orxOBJECT {.
    cdecl, importc: "orxObject_GetNextEnabled", dynlib: libORX.}
  ## Gets next object in group.
  ##  @param[in]   _pstObject      Concerned object, nil to get the first one
  ##  @param[in]   _stGroupID      Group ID to consider, orxSTRINGID_UNDEFINED for all
  ##  @return      orxOBJECT / nil

proc pick*(pvPosition: ptr orxVECTOR; stGroupID: orxSTRINGID): ptr orxOBJECT {.
    cdecl, importc: "orxObject_Pick", dynlib: libORX.}
  ## @}
  ## @name Picking
  ##  @{
  ## Picks the first active object with size "under" the given position, within a given group. See
  ##  orxObject_BoxPick(), orxObject_CreateNeighborList() and orxObject_Raycast for other ways of picking
  ##  objects.
  ##  @param[in]   _pvPosition     Position to pick from
  ##  @param[in]   _stGroupID      Group ID to consider, orxSTRINGID_UNDEFINED for all
  ##  @return      orxOBJECT / nil
